--- a/index.html
+++ b/index.html
@@ -15,40 +15,40 @@
     </header>
     <nav> </nav>
     <H3>大学相关：</H3>
-    <td><a href="http://run.hbut.edu.cn/" target=_top">湖工教务系统</a>
-        <a href="https://lib.hbut.edu.cn/" target=_top">湖工图书馆</a>
-        <a href="https://jsjxy.hbut.edu.cn/" target=_top">湖工计院</a></td>
+    <td><a href="http://run.hbut.edu.cn/" target=_blank">湖工教务系统</a>
+        <a href="https://lib.hbut.edu.cn/" target=_blank">湖工图书馆</a>
+        <a href="https://jsjxy.hbut.edu.cn/" target=_blank">湖工计院</a></td>
     <H3>秃头系列：</H3>
     <td>
-        <a href="https://github.com/" target=_top">GitHub</a>
-        <a href="https://gitee.com/" target=_top">gitee</a>
-        <a href="http://markdown.xiaoshujiang.com/" target=_top">小书匠</a>
-        <a href="https://www.educoder.net/" target=_top">EduCoder</a>
-        <a href="https://www.lfd.uci.edu/~gohlke/pythonlibs/" target=_top">py镜像库</a>
+        <a href="https://github.com/" target=_blank">GitHub</a>
+        <a href="https://gitee.com/" target=_blank">gitee</a>
+        <a href="http://markdown.xiaoshujiang.com/" target=_blank">小书匠</a>
+        <a href="https://www.educoder.net/" target=_blank">EduCoder</a>
+        <a href="https://www.lfd.uci.edu/~gohlke/pythonlibs/" target=_blank">py镜像库</a>
     </td>
     <H3>小工具：</H3>
     <td>
-        <a href=https://t1.free-air.org/ss%E5%85%8D%E8%B4%B9%E8%B4%A6%E5%8F%B7/" target=_top">FREE-SSR</a>
-        <a href=https://wallhaven.cc/" target=_top">WallPapers</a>
-        <a href=http://kyon945.ys168.com/" target=_top">储物间</a>
-        <a href=https://archive.org/" target=_top">回溯机</a>
+        <a href="https://t1.free-air.org/ss%E5%85%8D%E8%B4%B9%E8%B4%A6%E5%8F%B7/" target=_blank">FREE-SSR</a>
+        <a href="https://wallhaven.cc/" target=_blank">WallPapers</a>
+        <a href="http://kyon945.ys168.com/" target=_blank">储物间</a>
+        <a href="https://archive.org/" target=_blank">回溯机</a>
     </td>
     <H3>学习套装：</H3>
     <td>
-        <a href=https://www.baidu.com" target=_top">Bai_du</a>
-        <a href=https://www.google.com" target=_top">Google</a>
-        <a href="http://www.bilibili.com/" target=_top">bilibili</a>
-        <a href=https://fanyi.baidu.com/?aldtype=16047#auto/zh" target=_top">翻译</a>
-        <a href=https://naotu.baidu.com/home" target=_top">脑图</a>
+        <a href="https://www.baidu.com/" target=_blank">百度</a>
+        <a href="https://www.google.com/" target=_blank">Google</a>
+        <a href="http://www.bilibili.com/" target=_blank">bilibili</a>
+        <a href="https://fanyi.baidu.com/" target=_blank">翻译</a>
+        <a href="https://naotu.baidu.com/home" target=_blank">脑图</a>
     </td>
     <H3>科学套装：</H3>
     <td>
-        <a href=https://www.xinjiecloud.me/" target=_top">心阶</a>
-        <a href=https://xbsj8789.site/?index=1" target=_top">西部世界</a>
-        <a href=https://jiyou.world/clientarea.php=16047#auto/zh" target=_top">极游</a>
-        <a href=https://www.youtube.com/" target=_top">YouTuBe</a>
+        <a href="https://www.xinjiecloud.me/" target=_blank">心阶</a>
+        <a href="https://xbsj8789.site/?index=1" target=_blank">西部世界</a>
+        <a href="https://jiyou.world/clientarea.php=16047#auto/zh" target=_blank">极游</a>
+        <a href="https://www.youtube.com/" target=_blank">YouTuBe</a>
     </td>
-    <br>
+    <br>3
     <fooder>
         <a href=" index.html" target="_blank">我开我自己</a>
     </fooder>
