--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
     <html lang="zh-CN">
     <meta charset="utf-8">
     <title>WOOGUGU</title>
+    <style>
+            a
+            {
+                text-decoration-line:none;
+                color:deeppink;
+                /*在老婆加必须用老婆的颜色*/
+            }
+            h1{
+                font-size:60px;
+            }
+        </style>
 </head>
 
 <body>
