--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <html lang="zh-CN">
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WOOGUGU</title>
     <style>
             a
